frontmetiermanifest/deployment-frontmetier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-metier
  labels:
    app: front-metier
    type: front
spec:
  selector:
    matchLabels:
      app: front-metier
      type: front
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: front-metier    
        type: front
    spec:
      nodeSelector:
        kubernetes.io/hostname: workernode2
      imagePullSecrets:
       - name: regcred
      containers:
        - name: front-metier
          image: 192.168.2.19:5000/frontmetier:1
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          resources:
            requests:
              memory: "3096Mi"
              cpu: "400m"
            limits:
              memory: "8Gi"
              cpu: "4"
              #---------------------------------#
          ports:
            - name: api
              containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
