frontmetiermanifest/service-frontmetier.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-front-metier 
spec:
  selector:
    app: front-metier
    type: front
  type: NodePort 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 
      name: http-front
      nodePort: 31102
