frontmetiermanifest/virtualServiceFrontMetier.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontmetiervs
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - name: frontmetier-vs
    match:
    - uri:
        prefix: /front-metier     
    route:
    - destination:
        host: service-front-metier 
        port:
          number: 80
